[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/webSocketsServer.gd" type="Script" id=1]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/game.gd" type="Script" id=3]
[ext_resource path="res://scenes/ui/HUD.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 982.972, 36.8348 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 39.9185, 596.809 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_left = -278.0
margin_top = -160.0
margin_right = 2242.0
margin_bottom = 1332.0
color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 960, 900 )

[node name="WebSocketsServer" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 963.627, 1022.11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.70276, 76.3512 )
shape = SubResource( 1 )

[node name="Walls" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2( -36.3464, 470.365 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2( 1960.87, 496.277 )
shape = SubResource( 2 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 4 )]

[connection signal="connected" from="WebSocketsServer" to="." method="_on_WebSocketsServer_connected"]
[connection signal="disconnected" from="WebSocketsServer" to="." method="_on_WebSocketsServer_disconnected"]
[connection signal="new_accel_data" from="WebSocketsServer" to="." method="_on_WebSocketsServer_new_accel_data"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
